# libixy-vfio

./: .gitignore  CMakeLists.txt  README.md
src/: libixy-vfio.c  libixy-vfio.h
